Agregué todas las operaciones CRUD que faltaban para todas las entidades